<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ChargeOnceActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/chargeOnceBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                app:icon="@drawable/arrow_back_24dp"
                />
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/chargeOnceNav"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_anchorGravity="bottom|center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/level_to_charge_to_string"
            android:textSize="20sp" />
        <!-- Discrete slider -->
        <com.google.android.material.slider.Slider
            android:id="@+id/chargeToSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stepSize="5.0"
            android:valueFrom="10.0"
            android:valueTo="100.0"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/voltage_limit_label"
            android:textSize="20sp" />
        <!-- Discrete slider -->
        <com.google.android.material.slider.Slider
            android:id="@+id/chargeToCurrentSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:valueFrom="0.0"
            android:valueTo="5000.0"
            android:stepSize="500.0"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="16dp"
            app:icon="@drawable/check_24px"
            android:text="@string/save_button">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>