<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConfigsFragment"
    android:id="@+id/configsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="16dp"
                android:id="@+id/daemonLabel">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/mySwitch"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:padding="0dp"
                        android:stepSize="5.0"
                        android:text="@string/acc_daemon_enable_label"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/mySwitch"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:padding="0dp"
                        android:stepSize="5.0"
                        android:text="@string/acc_daemon_enable_description"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/mySwitch"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/mySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:checked="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charging_capacity_label"
            android:textSize="20sp"
            />
        <!-- Discrete slider -->
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/capacitySlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stepSize="5.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:values="@array/initial_slider_values"
            />
        <com.google.android.material.slider.Slider
            android:id="@+id/passThgLevelSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:stepSize="5.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:values="@array/initial_slider_values"/>
        <TextView
            android:id="@+id/capacityLabel"
            android:clickable="false"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="1dp"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="16dp"
                android:id="@+id/fakePassThrLabel">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/fakePassThrSwitch"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:padding="0dp"
                        android:stepSize="5.0"
                        android:text="@string/fake_passthr_label"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/fakePassThrSwitch"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="290dp"
                        android:layout_height="36dp"
                        android:layout_gravity="start|center_vertical"
                        android:clickable="false"
                        android:focusable="false"
                        android:padding="0dp"
                        android:stepSize="5.0"
                        android:text="@string/fake_passthr_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/fakePassThrSwitch"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/fakePassThrSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:checked="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltage_limit_label"
            android:textSize="20sp" />
        <com.google.android.material.slider.Slider
            android:id="@+id/currentSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:valueFrom="0.0"
            android:valueTo="5000.0"
            android:stepSize="500.0" />
        <TextView
            android:id="@+id/currentLabel"
            android:clickable="false"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:stepSize="5.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="1dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_limit_label"
            android:textSize="20sp" />
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/tempSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:valueFrom="20.0"
            android:valueTo="55.0"
            android:stepSize="5.0" />
        <TextView
            android:id="@+id/tempLabel"
            android:clickable="false"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:stepSize="5.0"
            android:valueFrom="0.0"
            android:valueTo="100.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="1dp"
            android:paddingBottom="0dp"/>

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="16dp"
                android:id="@+id/chargeOnceTo">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:padding="0dp"
                        android:stepSize="5.0"
                        android:text="@string/charge_once_label"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/mySwitch"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:clickable="false"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:padding="0dp"
                        android:stepSize="5.0"
                        android:text="@string/charge_once_description"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/mySwitch"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>